Build skeleton of chat app

--- a/examples/cowboy-chat/rel/reltool.config
+++ b/examples/cowboy-chat/rel/reltool.config
@@ -8,6 +8,7 @@
          stdlib,
          sasl,
          crypto,
+         mimetypes,
          ranch,
          cowboy,
          chat
@@ -28,6 +29,7 @@
        {app, stdlib, [{incl_cond, include}]},
        {app, kernel, [{incl_cond, include}]},
        {app, crypto, [{incl_cond, include}]},
+       {app, mimetypes, [{incl_cond, include}]},
        {app, ranch, [{incl_cond, include}]},
        {app, cowboy, [{incl_cond, include}]},
        {app, chat, [{incl_cond, include}]}
