--- a/examples/cowboy-chat/rebar.config
+++ b/examples/cowboy-chat/rebar.config
@@ -5,6 +5,8 @@
 ]}.
 
 {deps, [
+    {mimetypes, ".*",
+        {git, "git://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}},
     {cowboy, ".*",
         {git, "git://github.com/extend/cowboy", {tag, "0.8.6"}}}
 ]}.
